--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,20 @@ li{
 }
 .btn-lvl-1{
     font-family: 'Roboto-Medium';
-    color: #dee2e6;
+    color: #FFFFFF;
     font-size: 1.5em;
     padding: 15px 10px 15px 10px;
     background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
     border-radius: 10px;
-    transition: 1s linear;
+    transition: 0.5s;
 
 }
 .btn-lvl-1:hover{
     color: #dee2e6;
     background-color: #00DBDE;
-    background-image: linear-gradient(90deg,#FC00FF 0%, #00DBDE 100%);
+    background-image: linear-gradient(to right,#2575fc  0%, #6a11cb 100%);
+    box-shadow: 0 0 30px rgba(0,0,0,0.5); /* Параметры тени */
 }
 .btn-lvl-2{
     font-family: 'Roboto-Medium';
@@ -70,11 +71,14 @@ li{
     font-family: 'Roboto-Medium';
     font-size: 1.1em;
     color: #0a53be;
+
 }
 .social-icon{
     justify-content: center;
     font-size: 1.5em;
-    padding: 0px 0px 0px 1em;
+}
+.social-icon a{
+    margin: 0 5px 0px 5px;
 }
 .menu-btn{
     font-size: 3em;
@@ -96,7 +100,7 @@ li{
 .logo{
     color: #1a1e21;
     font-family: 'Roboto-Back';
-    font-size: 2.5em;
+    font-size: 2.1em;
 }
 
 .home{
@@ -179,7 +183,40 @@ portfolio
     margin-top: 10%;
 }
 
+.link-portfolio{
+    overflow:hidden;
+    margin: 10px 10px 5px 5px;
+    transition: 1s;
+}
+.link-portfolio:hover{
+    box-shadow: 0 0 15px rgba(0,0,0,0.5); /* Параметры тени */
+}
+.link-portfolio a img
+{
+    -moz-transition: all 1s ease-out;
+    -o-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+.link-portfolio a img:hover
+{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+.link-portfolio:hover  .card-body{
+    background: #FFFFFF;
+}
+
+.footer{
+    margin-top: 15%;
+    background: #1a1e21;
+}
+
 .bg-gradient-1{
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 }
+
